# holus

./: .gitignore  AGENTS.md  APPROACH_v1.md  ARCHITECTURE.md  ASSUMPTIONS.md  BACKLOG.md  CLAUDE.md  LICENSE  README.md  STRATEGY.md  init-project.sh  main.py  pyproject.toml  requirements.txt
.agent/rules/: README.md  security.md  style.md
.ai/: CHANGELOG.md  decision-boundaries.md
.codex/: README.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
agents/: __init__.py
build-logs/: 2026-02-10.md  2026-02-11-retro.md  2026-02-11.md
config/: .env.example  config.example.yaml
core/: __init__.py  base_agent.py  llm.py  memory.py  notifier.py  orchestrator.py
dashboard/: app.py
docs/: ADDING_AGENTS.md  DEPLOYMENT.md
manager/: TEMPLATE.md
memory/: 2026-02-11.md
research/: 2026-02-11-trends.md
scripts/: migrate.py
shared/: __init__.py  base_agent.py  config.py  inbox_manager.py  llm.py  memory.py  notifier.py  orchestrator.py  research_scout.py  types.py
specs/: 000-architecture-overview.md  001-holus-restructure.md  001-job-hunter-agent.md  001-orchestrator-hub.md  002-content-strategy-domain.md  003-adapter-system.md  003-social-media-agent.md  003-trading-monitor-agent.md  004-research-scout-agent.md  004-subprocess-isolation.md  005-content-data-warehouse.md  005-inbox-manager-agent.md  007-openclaw-integration.md  008-dashboard-api.md  README.md
strategy-log/: 2026-02-10-daily.md
tasks/: 2026-02-10-afternoon.md  2026-02-10-morning.md  2026-02-11-morning.md
tests/: test_content_strategy.py  test_core.py  test_dashboard.py
(+104 files in other folders)
