[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "holus"
version = "0.1.0"
description = "Personal AI Agent Workforce — like Ultron, but it works for you"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.scripts]
holus = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "agents*", "tools*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
